--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -32,5 +32,6 @@ jobs:
         uses: EndBug/add-and-commit@v4
         with:
           add: "modlinks.json"
+          force: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
