--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -1,5 +1,5 @@
 
-name: Synchronize ModLinks
+name: Sync ModLinks
 on:
   push:
   workflow_dispatch:
@@ -32,6 +32,5 @@ jobs:
         uses: EndBug/add-and-commit@v9.1.1
         with:
           add: "modlinks.json"
-          force: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
