--- a/.github/workflows/filerecord.yml
+++ b/.github/workflows/filerecord.yml
@@ -1,10 +1,10 @@
 
-name: Sync ModLinks
+name: Record Files
 on:
   push:
   workflow_dispatch:
   schedule:
-    - cron: '0,30 * * * *'
+    - cron: '5,35 * * * *'
 
 jobs:
   sync:
@@ -25,14 +25,14 @@ jobs:
       - name: Build
         run: |
           npm run build
-          npm run run-sync
+          npm run run-file
         env: 
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Commit changes
         uses: EndBug/add-and-commit@v9.1.1
         with:
           default_author: github_actions
-          add: "modlinks.json"
+          add: "filerecords.json"
           pull: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
