--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     },
     "scripts": {
         "build": "tsc",
-        "run": "node ./dist/main.js"
+        "run-sync": "node ./dist/main.js",
+        "run-file": "node ./dist/fileRecord.js"
     },
     "devDependencies": {
+        "@types/compression": "^1.7.2",
         "@types/fs-extra": "^9.0.13",
         "@types/node": "^18.11.12",
+        "compressing": "^1.6.3",
         "typescript": "^4.9.4"
     }
 }
