--- a/.github/workflows/filerecord.yml
+++ b/.github/workflows/filerecord.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   sync:
-    name: Sync
+    name: Record Files
     runs-on: windows-latest
     steps:
       - name: Check out git repository
@@ -33,6 +33,5 @@ jobs:
         with:
           default_author: github_actions
           add: "filerecords.json"
-          pull: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
