--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -36,3 +36,6 @@ jobs:
           add: "modlinks.json"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Check cache
+        run: |
+          npm run check-cache
